Frontend/K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthmate-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
  - host: healthmate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: healthmate-service
            port:
              number: 80
  tls:
  - hosts:
    - healthmate.com
    secretName: healthmate-com-tls  # Ensure this matches your Certificate's secret
